--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,8 @@
         </activity>
         <activity
             android:name=".com.davidllorca.lafoscabeach.activities.MainActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:label="@string/app_name"
+            android:windowSoftInputMode="adjustPan|adjustResize"></activity>
     </application>
 
 </manifest>
